# TaskTracker

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
architecture/: api.md  database.md
docker/api/: Dockerfile  docker-compose.yml
secrets/: example_db.env
src/api/: app.py  config.py  main.py
src/api/crud/: __init__.py
src/api/routers/: issues.py  root.py  users.py
src/api/tests/: conftest.py  test_create_issue.py  test_create_user.py
src/common/database/: config.py  database_engine.py  settings.toml
src/common/database/alembic/: README.md  alembic.ini  env.py  script.py.mako
src/common/database/alembic/versions/: 34331327c046_initial_migration.py  e8d14f6eed6c_added_descriptions.py
src/common/database/crud/: __init__.py
src/common/database/models/: __init__.py
src/common/database/schemas/: __init__.py
