[tool.poetry]
name = "tasktracker"
version = "0.1.0"
description = ""
authors = ["Shan <pruskimateusz93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
SQLAlchemy = "^1.4.42"
alembic = "^1.8.1"
alembic-migrate = "^2.5.9-alpha.0"
dynaconf = "^3.1.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
