[tool.poetry]
name = "tasktracker"
version = "0.1.0"
description = ""
authors = ["Shan <pruskimateusz93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
SQLAlchemy = "1.4.41"
alembic = "^1.8.1"
dynaconf = "^3.1.11"
asyncpg = "^0.26.0"
ormar = "^0.12.0"
psycopg2-binary = "^2.9.5"
pytest = "^7.2.0"
requests = "^2.28.1"
aiosqlite = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
